Network/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-nodes
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}   # Allow egress traffic to all pods in the same namespace
    - nodeSelector:
        kubernetes.io/hostname: node1   # Allow egress traffic to nodes with hostname node1
    - nodeSelector:
        kubernetes.io/hostname: node2   # Allow egress traffic to nodes with hostname node2
    - nodeSelector:
        kubernetes.io/hostname: node3   # Allow egress traffic to nodes with hostname node3
